--- a/Index.html
+++ b/Index.html
@@ -14,12 +14,43 @@
   <div class="container">
     <form class="pigDice">
 
-    </form>
     <h1>Pig dice Game!!</h1>
     <p>Rules of the game: Two player game, start by roling the dice! If you score 2-6 add the number on the die to your score. Between each role you have the option of role again or hold. If you score a 1 then it is the next players turn and no score is to be tallied</p>
-    <button type="submit" class="roleDice" name="button">Role</button>
-    <button type="button" class="holdDice" name="button">Hold</button>
+
+    <h4>To begin, please enter your name and click start to begin. </h4>
+
+    <div class="start-menu container">
+      <div class="jumbotron">
+        <h1>Let's play Pig Dice!</h1>
+          <form id="player-1">
+            <div class="form-group">
+              <label for="player1Name">Player 1 Name:</label>
+              <input required class="player1Name form-control" type="text">
+            </div>
+          </form>
+          <form id="player-2">
+            <div class="form-group">
+              <label for="player2Name">Player 2 Name:</label>
+              <input required class="player2Name form-control" type="text">
+            </div>
+          </form>
+          <button id="start" class="btn-info btn">Start</button>
+      </div>
+    </div>
+    <div class="col-sm-6">
+
+    <label for="player2role"><span="player2Name"></span></label>
+    <button type="button" id ="player1Role" name="button">Role!</button>
+    <button type="button" class="player1Hold" name="button">Ehh Ill Hold</button>
   </div>
+  <div class="col-sm-6">
+    <label for="player2role"><span="player2Name"></span></label>
+    <button type="button" id ="player2Role" name="button">Role!</button>
+    <button type="button" class="player2Hold" name="button">Ehh Ill Hold</button>
+  </div>
+
+    <button type="button" id= "new-game" name="button">New Game</button>
+</div>
   <div class="results">
     <p id="score"> </p>
       </form>
